[project]
name = "edgepower-coordinator"
version = "0.1.0"
description = "Safe HTTP coordinator for allowlisted distributed edge-compute jobs."
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.8,<3.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2,<9.0",
    "httpx>=0.27,<1.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
